# QT-Latex-Editor

./: .gitignore  CMakeLists.txt  README.md  application.qrc  nihao.tex
addons/: CMakeLists.txt
addons/lspclient/: lspclientcompletion.h  lspclientprotocol.h
src/: CMakeLists.txt  config.qrc  dark_red.qss  main.cpp  mainwindow.cpp  mainwindow.h
src/assets/: mainwindow.ui
src/components/: KFeditviewspace.cpp  KFeditviewspace.h  KFpdfview.cpp  KFpdfview.h  KFviewmanager.cpp  KFviewmanager.h  kftexmainwindow.cpp  kftexmainwindow.h  kftexmdi.cpp  kftexmdi.h  listdialog.cpp  listdialog.hpp
src/utils/: http.cpp  http.h
